changed color of #menu conduit; added new accent1 color var; #one - removed bottom margin;

--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -63,7 +63,8 @@ $palette: (
         border:         rgba(0, 0, 0, .125),
         border-bg:      rgba(255, 255, 255, .075),
         border2:        rgba(0, 0, 0, .25),
-        border2-bg:     rgba(255, 255, 255, .2)
+        border2-bg:     rgba(255, 255, 255, .2),
+        border3:        rgba(0, 0, 0, .17)
     ),
 
     accent2: (
