--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -213,6 +213,7 @@ header {
         color: _palette(fg-light);
         position: relative;
         top: -0.25em;
+        margin-bottom: 1em;
     }
 
     //h1 + p {
@@ -232,7 +233,7 @@ header {
     }
 
     &.major {
-        margin: 0 0 (_size(element-margin) * 1.75) 0;
+        margin: 0;
 
         h2, h3, h4, h5, h6 {
             border-bottom: solid 2px _palette(border);
